force-app/main/default/objects/Claim__c/fields/Cause_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Loss__c</fullName>
    <label>Cause of Loss</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Water Leak</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>