force-app/main/default/objects/Claim__c/fields/Claim_Denied__c.field-meta.xml
<CustomField>
    <fullName>Claim_Denied__c</fullName>
    <label>Claim Denied</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>