force-app/main/default/objects/Claim__c/fields/Claimant_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Name__c</fullName>
    <label>Claimant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>