force-app/main/default/objects/Claim__c/fields/Claims_Handler__c.field-meta.xml
<CustomField>
    <fullName>Claims_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claims Handler</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>