force-app/main/default/objects/Claim__c/fields/Claims_O_S__c.field-meta.xml
<CustomField>
    <fullName>Claims_O_S__c</fullName>
    <formula>VG_Reserve__c - VG_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claims O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>