force-app/main/default/objects/Claim__c/fields/Class_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Business__c</fullName>
    <formula>TEXT( Policy_Number__r.Line_Of_Business__c )</formula>
    <label>Class of Business</label>
    <type>Text</type>
</CustomField>