force-app/main/default/objects/Claim__c/fields/Date_Claim_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Claim_Closed__c</fullName>
    <label>Date Claim Closed</label>
    <type>Date</type>
</CustomField>