force-app/main/default/objects/Claim__c/fields/Date_Claim_Denied__c.field-meta.xml
<CustomField>
    <fullName>Date_Claim_Denied__c</fullName>
    <label>Date Claim Denied</label>
    <type>Date</type>
</CustomField>