force-app/main/default/objects/Claim__c/fields/Date_claim_withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Date_claim_withdrawn__c</fullName>
    <label>Date claim withdrawn</label>
    <type>Date</type>
</CustomField>