force-app/main/default/objects/Claim__c/fields/Date_Reopened__c.field-meta.xml
<CustomField>
    <fullName>Date_Reopened__c</fullName>
    <label>Date Reopened</label>
    <type>Date</type>
</CustomField>