force-app/main/default/objects/Claim__c/fields/External_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Claim_Number__c</fullName>
    <label>External Claim Number</label>
    <type>TextArea</type>
</CustomField>