force-app/main/default/objects/Claim__c/fields/Gross_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Gross_Reserve__c</fullName>
    <label>Ground Up Reserve</label>
    <summarizedField>Claims_Schedule__c.VG_Reserve__c</summarizedField>
    <summaryForeignKey>Claims_Schedule__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>