force-app/main/default/objects/Claim__c/fields/Jurisdiction_of_the_claim__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_of_the_claim__c</fullName>
    <label>Claim Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>