force-app/main/default/objects/Claim__c/fields/Lead_Broker_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Broker_Claim_Number__c</fullName>
    <label>Lead / Broker Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>