force-app/main/default/objects/Claim__c/fields/Litigation_status__c.field-meta.xml
<CustomField>
    <fullName>Litigation_status__c</fullName>
    <label>Litigation status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>