force-app/main/default/objects/Claim__c/fields/Location_of_Loss_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Loss_Address__c</fullName>
    <label>Location of Loss Address</label>
    <type>TextArea</type>
</CustomField>