force-app/main/default/objects/Claim__c/fields/Loss_Description__c.field-meta.xml
<CustomField>
    <fullName>Loss_Description__c</fullName>
    <label>Loss Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>