force-app/main/default/objects/Claim__c/fields/Rate_of_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Exchange__c</fullName>
    <label>Rate of Exchange</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>