force-app/main/default/objects/Claim__c/fields/Reason_for_Denial__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Denial__c</fullName>
    <label>Reason for Denial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>