force-app/main/default/objects/Claim__c/fields/Refer_to_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Refer_to_Underwriter__c</fullName>
    <label>Refer to Underwriter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>