force-app/main/default/objects/Claim__c/fields/Risk_Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Inception_Date__c</fullName>
    <label>Risk Inception Date</label>
    <type>Date</type>
</CustomField>