force-app/main/default/objects/Claim__c/fields/Total_Claim_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_Reserve__c</fullName>
    <formula>VG_Reserve__c +  Total_Expense_Reserve__c  - Total_Recovery_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Claims Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>