force-app/main/default/objects/Claim__c/fields/Total_Claims_O_S__c.field-meta.xml
<CustomField>
    <fullName>Total_Claims_O_S__c</fullName>
    <formula>Total_Claim_Reserve__c - Total_Claims_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Claims O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>