force-app/main/default/objects/Claim__c/fields/Total_Claims_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Claims_Paid__c</fullName>
    <formula>VG_Paid__c + Total_Expense_Paid__c - Total_Recovery_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Claims Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>