force-app/main/default/objects/Claim__c/fields/Total_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Total_Deductible__c</fullName>
    <label>Total Deductible</label>
    <summarizedField>Claims_Schedule__c.Deductible_Amount__c</summarizedField>
    <summaryForeignKey>Claims_Schedule__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>