force-app/main/default/objects/Claim__c/fields/Total_Ex_Gratia_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Ex_Gratia_Payment__c</fullName>
    <label>Ex-Gratia Payments</label>
    <summarizedField>Claims_Schedule__c.Total_Ex_Gratia_Payment__c</summarizedField>
    <summaryForeignKey>Claims_Schedule__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>