force-app/main/default/objects/Claim__c/fields/Total_Expense_O_S__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_O_S__c</fullName>
    <formula>Total_Expense_Reserve__c - Total_Expense_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expense O/S</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>