force-app/main/default/objects/Claim__c/fields/Total_Expense_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Reserve__c</fullName>
    <label>Total Expense Reserve</label>
    <summarizedField>Claims_Schedule__c.Total_Expense_Reserve__c</summarizedField>
    <summaryForeignKey>Claims_Schedule__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>