force-app/main/default/objects/Claim__c/fields/Total_Recovery_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_Recovery_Received__c</fullName>
    <label>Total Recovery Received</label>
    <summarizedField>Claims_Schedule__c.Total_Recovery_Received__c</summarizedField>
    <summaryForeignKey>Claims_Schedule__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>