force-app/main/default/objects/Claim__c/fields/TPA_Adjustor__c.field-meta.xml
<CustomField>
    <fullName>TPA_Adjustor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPA Adjustor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims (TPA)</relationshipLabel>
    <relationshipName>Claims1</relationshipName>
    <type>Lookup</type>
</CustomField>