force-app/main/default/objects/Claim__c/fields/VG_Paid__c.field-meta.xml
<CustomField>
    <fullName>VG_Paid__c</fullName>
    <label>Claims Paid</label>
    <summarizedField>Claims_Schedule__c.VG_Paid__c</summarizedField>
    <summaryForeignKey>Claims_Schedule__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>