force-app/main/default/objects/Claim__c/fields/VG_Reserve__c.field-meta.xml
<CustomField>
    <fullName>VG_Reserve__c</fullName>
    <label>Net Claim Reserve</label>
    <summarizedField>Claims_Schedule__c.Net_Claim_Reserve__c</summarizedField>
    <summaryForeignKey>Claims_Schedule__c.Claim__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>