force-app/main/default/objects/Claim__c/fields/VG_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>VG_Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Claim_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Coverage Agreed</fullName>
            </value>
            <value>
                <fullName>Amount Agreed</fullName>
            </value>
            <value>
                <fullName>Claim Paid, Fees O/S</fullName>
            </value>
            <value>
                <fullName>Fees Paid, Claim O/S</fullName>
            </value>
            <value>
                <fullName>Claim &amp; Fees Paid</fullName>
            </value>
            <value>
                <fullName>Subrogation / Recovery pursued</fullName>
            </value>
            <value>
                <fullName>Structured Settlement</fullName>
            </value>
            <value>
                <fullName>Ex-Gratia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>